--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -45,8 +45,8 @@
 
 除了上面的定义方法，对于这样的集合，还有这样的性质：
 \begin{align}
-    (U_1\Rightarrow U_2y) &\Rightarrow \textit{FIRSTVT}(U_2)\in \textit{FIRSTVT}(U_1) \\
-    (U_1\Rightarrow xU_2) &\Rightarrow \textit{LASTVT}(U_2)\in \textit{LASTVT}(U_1)
+    (U_1\Rightarrow U_2y) &\Rightarrow \textit{FIRSTVT}(U_2)\subseteq \textit{FIRSTVT}(U_1) \\
+    (U_1\Rightarrow xU_2) &\Rightarrow \textit{LASTVT}(U_2)\subseteq \textit{LASTVT}(U_1)
 \end{align}
 
 这样定义 \ref{def:op} 就有了如下的等价定义：
