--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -5,6 +5,8 @@
 \usepackage{booktabs}
 \usepackage{array}
 \usepackage{float}
+\usepackage{listings}
+\lstset{basicstyle=\ttfamily, frame=single, columns=flexible}
 \bibliographystyle{IEEEtran}
 \title{\normalsize\underline{编译原理(A)大作业}\\\Large 算符优先分析表和卷积优化}
 \author{李子龙 518070910095}
@@ -16,8 +18,20 @@
 
 \part{算符优先分析表}
 \subsection*{程序输出}
-% \input{output1.txt}
-% \input{output2.txt}
+\subsubsection*{样例 1 输入}
+\begin{lstlisting}[frameround=fttt]
+opg input1.txt
+\end{lstlisting}
+\lstinputlisting{../opg/input1.txt}
+\subsubsection*{样例 1 输出}
+\lstinputlisting{../opg/output1.txt}
+\subsubsection*{样例 2 输入}
+\begin{lstlisting}[frameround=fttt]
+opg input2.txt
+\end{lstlisting}
+\lstinputlisting{../opg/input2.txt}
+\subsubsection*{样例 2 输出}
+\lstinputlisting{../opg/output2.txt}
 
 \section{题目分析}
 
@@ -61,7 +75,7 @@
 
 \section{算法实现}
 
-
+本程序采用 Rust 语言实现\cite{SteveKlabnik2019}。
 
 %% 二义性
 % 如果一个文法是无二义性的，那么该文法的每个右句型都有且只有一个句柄。
