--- a/report/ref.bib
+++ b/report/ref.bib
@@ -21,4 +21,15 @@
   publisher = {Association for Computing Machinery ({ACM})},
 }
 
+@Book{SteveKlabnik2019,
+  author    = {Steve Klabnik, Carol Nichols},
+  publisher = {Random House LCC US},
+  title     = {The Rust Programming Language (Covers Rust 2018)},
+  year      = {2019},
+  isbn      = {1718500440},
+  date      = {2019-08-12},
+  ean       = {9781718500440},
+  url       = {https://www.ebook.de/de/product/37149179/steve_klabnik_carol_nichols_the_rust_programming_language_covers_rust_2018.html},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
