--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -17,18 +17,21 @@
     \clearpage
 
 \part{算符优先分析表}
+\subsection*{运行环境}
+\begin{tabular}{ll}
+    操作系统 & Windows \\
+    语言 & Rust \\
+\end{tabular}
+\vspace*{1em}
+\begin{lstlisting}[frameround=fttt]
+    opg [filename]
+\end{lstlisting}
 \subsection*{程序输出}
 \subsubsection*{样例 1 输入}
-\begin{lstlisting}[frameround=fttt]
-opg input1.txt
-\end{lstlisting}
 \lstinputlisting{../opg/input1.txt}
 \subsubsection*{样例 1 输出}
 \lstinputlisting{../opg/output1.txt}
 \subsubsection*{样例 2 输入}
-\begin{lstlisting}[frameround=fttt]
-opg input2.txt
-\end{lstlisting}
 \lstinputlisting{../opg/input2.txt}
 \subsubsection*{样例 2 输出}
 \lstinputlisting{../opg/output2.txt}
