--- a/report/ref.bib
+++ b/report/ref.bib
@@ -30,4 +30,16 @@
   url       = {https://www.ebook.de/de/product/37149179/steve_klabnik_carol_nichols_the_rust_programming_language_covers_rust_2018.html},
 }
 
+@Misc{uft,
+  author = {{namhyung}},
+  title  = {uftrace},
+  url    = {https://github.com/namhyung/uftrace},
+}
+
+@Misc{flame,
+  author = {{brendangregg}},
+  title  = {{FlameGraph}},
+  url    = {https://github.com/brendangregg/FlameGraph},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
