run successfully with 0.8

--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -202,6 +202,12 @@
 以上结果由 \href{run:../opg/uftrace.sh}{该脚本} 生成。关于函数的更多信息，请访问 \href{run:../opg/target/doc/opg/index.html}{API 文档}。% 使用 cargo doc 编译。
 
 \part{卷积优化}
+\subsection*{运行截图}
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{img/raw1.png}
+\end{figure}
+
 \subsection*{优化结果}
 \begin{table}[H]
     \begin{tabular}{m{17em}rrc}
