--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -1,4 +1,5 @@
-\documentclass[UTF8]{ctexart}
+\documentclass[UTF8]{article}
+\usepackage{ctex}
 \usepackage{amsmath,amssymb}
 \newtheorem{definition}{定义}
 \usepackage[colorlinks]{hyperref}
@@ -226,6 +227,9 @@
         \bottomrule
     \end{tabular}
 \end{table}
+
+% raw 2-1: 493806.119851 ms
+% raw 2-2: 496377.535468 ms
 
 \bibliography{ref}
 
