--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -1,5 +1,4 @@
-\documentclass[UTF8]{article}
-\usepackage{ctex}
+\documentclass[UTF8]{ctexart}
 \usepackage{amsmath,amssymb}
 \newtheorem{definition}{定义}
 \usepackage[colorlinks]{hyperref}
@@ -230,6 +229,8 @@
 
 % raw 2-1: 493806.119851 ms
 % raw 2-2: 496377.535468 ms
+
+% 使用 
 
 \bibliography{ref}
 
