--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -230,6 +230,8 @@
 % raw 2-1: 493806.119851 ms
 % raw 2-2: 496377.535468 ms
 
+% Virtual Multithreading for large matrix
+
 \bibliography{ref}
 
 \end{document}
