--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -113,20 +113,20 @@
     \caption{类别号码}\label{tab:num}
     \subfigure[\textit{FIRSTVT}]{
         \begin{tabular}{|c|c|c|}
-            \toprule
+            \hline
             $F$ & $E$ & $T$ \\
-            \midrule
+            \hline
             \bfseries 0 &\bfseries 2 &\bfseries 4 \\
-            \bottomrule
+            \hline
         \end{tabular}
     }
     \subfigure[\textit{LASTVT}]{
         \begin{tabular}{|c|c|c|}
-            \toprule
+            \hline
             $F$ & $E$ & $T$ \\
-            \midrule
+            \hline
             \bfseries 1 &\bfseries 2 &\bfseries 0 \\
-            \bottomrule
+            \hline
         \end{tabular}
     }
 \end{table}
