fill the result

--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -204,8 +204,11 @@
 \part{卷积优化}
 \subsection*{运行截图}
 \begin{figure}[H]
-	\centering
-    \includegraphics[width=\textwidth]{img/raw1.png}
+    \centering
+    \subfigure[raw1]{\includegraphics[width=0.45\textwidth]{img/raw1.png}}
+    \subfigure[op1]{\includegraphics[width=0.45\textwidth]{img/op1.png}}
+    \subfigure[raw2]{\includegraphics[width=0.45\textwidth]{img/raw2.png}}
+    \subfigure[op2]{\includegraphics[width=0.45\textwidth]{img/op2.png}}
 \end{figure}
 
 \subsection*{优化结果}
