--- a/report/ref.bib
+++ b/report/ref.bib
@@ -42,4 +42,26 @@
   url    = {https://github.com/brendangregg/FlameGraph},
 }
 
+@Misc{cpu,
+  author = {Jian, Weng and Ruofei, Yu},
+  title  = {How to optimize {GEMM} on {CPU}},
+  groups = {TVM},
+  url    = {https://tvm.apache.org/docs/tutorials/optimize/opt_gemm.html#sphx-glr-tutorials-optimize-opt-gemm-py},
+}
+
+@Misc{vta,
+  author = {Thierry Moreau},
+  title  = {{2D} Convolution Optimization},
+  groups = {TVM},
+  url    = {https://tvm.apache.org/docs/vta/tutorials/optimize/convolution_opt.html?highlight=convolution},
+}
+
+@Misc{issue,
+  author = {tvm},
+  month  = feb,
+  title  = {{[LLVM] Explicit llvm::StringRef to std::string conversion}},
+  year   = {2020},
+  url    = {https://github.com/apache/tvm/pull/4859},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
