--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -199,7 +199,7 @@
     \label{fig:flame}
 \end{figure}
 
-以上结果由 \href{run:../opg/uftrace.sh}{该脚本} 生成。关于函数的更多信息，请访问 \href{run:../opg/target/doc/opg/index.html}{API 文档}。% 使用 cargo doc 编译。
+以上结果由 \href{run:../opg/uftrace.sh}{该脚本} 生成。关于函数的更多信息，请访问 \href{run:../opg/target/doc/opg/index.html}{API 文档}，里面详细描述了函数的调用方法和原理。% 使用 cargo doc 编译。
 
 \vspace*{5em}
 
