ready for release

--- a/report/compiler.tex
+++ b/report/compiler.tex
@@ -12,7 +12,7 @@
 \lstset{basicstyle=\ttfamily, frame=single, columns=flexible, extendedchars=false}
 \bibliographystyle{IEEEtran}
 \title{\normalsize\underline{编译原理(A)大作业}\\\Large 算符优先分析表和卷积优化}
-\author{李子龙 518070910095}
+\author{Log Creative}
 \begin{document}
     \maketitle 
     \tableofcontents
