--- a/report/ref.bib
+++ b/report/ref.bib
@@ -53,7 +53,7 @@
   author = {Thierry Moreau},
   title  = {{2D} Convolution Optimization},
   groups = {TVM},
-  url    = {https://tvm.apache.org/docs/vta/tutorials/optimize/convolution_opt.html?highlight=convolution},
+  url    = {https://tvm.apache.org/docs/vta/tutorials/optimize/convolution_opt.html},
 }
 
 @Misc{issue,
